--- a/tests/inventory/hosts.yml
+++ b/tests/inventory/hosts.yml
@@ -4,3 +4,12 @@ all:
     local:
       hosts:
         molecule-local-instance-1-deploy-nexus-repository:
+    DOCKER:
+      hosts:
+        molecule-local-instance-1-deploy-nexus-repository:
+    APACHE2:
+      hosts:
+        molecule-local-instance-1-deploy-nexus-repository:
+    NEXUS:
+      hosts:
+        molecule-local-instance-1-deploy-nexus-repository:
