added real role version

--- a/molecule/cicd-debian-11/requirements.yml
+++ b/molecule/cicd-debian-11/requirements.yml
@@ -25,4 +25,4 @@
 
 - name: "labocbz.install_nexus_repository"
   src: "https://github.com/CBZ-D-velop/Ansible-Role-Labocbz-Install-Nexus-Repository.git"
-  version: "develop"
+  version: "1.0"
