--- a/molecule/cicd-debian-12/molecule.yml
+++ b/molecule/cicd-debian-12/molecule.yml
@@ -8,13 +8,9 @@ driver:
   name: "docker"
 
 platforms:
-  - name: "molecule-local-instance-1-deploy-nexus-repository"
-    image: "robincbz/debian-12-ansible:latest"
-    hostname: "molecule-local-instance-1-prepare-host"
-    published_ports:
-      - "0.0.0.0:80:80/tcp"
-      - "0.0.0.0:443:443/tcp"
-      - "0.0.0.0:8081:8081/tcp"
+  - name: "molecule-cicd-debian-12-instance-1-deploy-nexus-repository"
+    image: "${NEXUS_REPOS_DOCKER_REGISTRY}/${DOCKER_IMAGE_DEBIAN_12_ANSIBLE}"
+    hostname: "molecule-cicd-debian-12-instance-1-deploy-nexus-repository"
     privileged: true
     pre_build_image: true
     command: "/sbin/init"
@@ -27,7 +23,7 @@ platforms:
     cgroup_manager: "cgroupfs"
     storage_driver: "overlay2"
     networks:
-      - name: "molecule-default-prepare-host"
+      - name: "molecule-cicd-debian-12-deploy-nexus-repository"
 
 provisioner:
   name: "ansible"
@@ -37,11 +33,11 @@ provisioner:
       group_vars: "../../tests/inventory/group_vars/"
       host_vars: "../../tests/inventory/host_vars/"
   options:
-    extra-vars: "@./tests/tower/tower.yml"
+    extra-vars: "@./../../tests/tower/tower.yml"
   log: ${MOLECULE_ANSIBLE_LOG:-true}
   env:
     ANSIBLE_CONFIG: "../../.ansible.cfg"
-    ANSIBLE_FORCE_COLOR: "True"
+    ANSIBLE_FORCE_COLOR: "true"
     # disable nologs
     MOLECULE_NOLOG: 0
     # disable destroy
@@ -55,10 +51,11 @@ verifier:
   name: "ansible"
 
 scenario:
-  name: "default"
+  name: "cicd-debian-12"
   test_sequence:
     - "destroy"
     - "syntax"
+    - "dependency"
     - "create"
     - "prepare"
     - "converge"
