--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -2,4 +2,6 @@
 - name: "Include labocbz.deploy_nexus_repository playbook"
   tags:
       - "labocbz.deploy_nexus_repository"
+  vars:
+    tower_env: "local"
   ansible.builtin.import_playbook: "../../playbook.yml"
