--- a/tests/inventory/group_vars/NEXUS.yml
+++ b/tests/inventory/group_vars/NEXUS.yml
@@ -1,11 +1,12 @@
 ---
-inv_install_nexus_repository: false
+inv_install_nexus_repository: true
 
-inv_install_nexus_repository_container_name: "nexus"
-inv_install_nexus_repository_data_path: "/mnt/nexus-data"
-inv_install_nexus_repository_heap: "4096m"
+inv_install_nexus_repository__container_name: "nexus"
+inv_install_nexus_repository__data_path: "/mnt/nexus-data"
+inv_install_nexus_repository__heap: "512"
 
-inv_install_nexus_repository_web_address: "0.0.0.0"
-inv_install_nexus_repository_web_port: 8081
-inv_install_nexus_repository_web_port_min: 8082
-inv_install_nexus_repository_web_port_max: 8100
+inv_install_nexus_repository__web_address: "0.0.0.0"
+inv_install_nexus_repository__web_port: 8081
+inv_install_nexus_repository__web_port_min: 8082
+inv_install_nexus_repository__web_port_max: 8100
+
