--- a/molecule/cicd-debian-11/verify.yml
+++ b/molecule/cicd-debian-11/verify.yml
@@ -168,10 +168,8 @@
 
         - name: "Check Nexus HTTP URL"
           register: result
-          failed_when: result.status != 200
+          failed_when: (result.status != 200 and result.status != -1)
           until: result.status != -1
-          retries: 10
-          delay: 10
           ansible.builtin.uri:
-            url: "http://localhost:{{ inv_install_nexus_repository__web_port }}/"
+            url: "http://{{ inventory_hostname }}:{{ inv_install_nexus_repository__web_port }}/"
             method: "GET"
