--- a/tests/inventory/hosts.yml
+++ b/tests/inventory/hosts.yml
@@ -4,30 +4,18 @@ all:
     local:
       hosts:
         molecule-local-instance-1-deploy-nexus-repository:
-    cicd-debian-12:
+    cicd-docker-dind:
       hosts:
-        molecule-cicd-debian-12-instance-1-deploy-nexus-repository:
-    cicd-debian-11:
-      hosts:
-        molecule-cicd-debian-11-instance-1-deploy-nexus-repository:
-    cicd-ubuntu-22:
-      hosts:
-        molecule-cicd-ubuntu-22-instance-1-deploy-nexus-repository:
+        molecule-cicd-docker-dind-instance-1-deploy-nexus-repository:
     APACHE2:
       hosts:
         molecule-local-instance-1-deploy-nexus-repository:
-        molecule-cicd-debian-12-instance-1-deploy-nexus-repository:
-        molecule-cicd-debian-11-instance-1-deploy-nexus-repository:
-        molecule-cicd-ubuntu-22-instance-1-deploy-nexus-repository:
+        molecule-cicd-docker-dind-instance-1-deploy-nexus-repository:
     DOCKER:
       hosts:
         molecule-local-instance-1-deploy-nexus-repository:
-        molecule-cicd-debian-12-instance-1-deploy-nexus-repository:
-        molecule-cicd-debian-11-instance-1-deploy-nexus-repository:
-        molecule-cicd-ubuntu-22-instance-1-deploy-nexus-repository:
+        molecule-cicd-docker-dind-instance-1-deploy-nexus-repository:
     NEXUS:
       hosts:
         molecule-local-instance-1-deploy-nexus-repository:
-        molecule-cicd-debian-12-instance-1-deploy-nexus-repository:
-        molecule-cicd-debian-11-instance-1-deploy-nexus-repository:
-        molecule-cicd-ubuntu-22-instance-1-deploy-nexus-repository:
+        molecule-cicd-docker-dind-instance-1-deploy-nexus-repository:
